--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Tests
 
 on:
@@ -25,4 +22,4 @@ jobs:
         python-version: "3.11"
     - name: Run tests
       run: |
-        python -m unittest discover -s tests
+        python -m unittest discover -s tests -v
