--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -10,16 +10,27 @@ permissions:
   contents: read
 
 jobs:
-  build:
-
+  runt-test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.11"
-    - name: Run tests
-      run: |
-        python -m unittest discover -s tests -v
+      - uses: actions/checkout@v4
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.11"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Coveralls GitHub Action
+        uses: coverallsapp/github-action@v2.3.0
+      - name: Run tests with coverage
+        run: |
+          coverage run -m unittest discover -s tests -v
+          coverage report
+          coverage xml
+      - name: Submit coverage to Coveralls
+        env:
+          COVERALLS_REPO_TOKEN: gxT8JHgyNrQMx7HI4O1WRh3c6JYKKKf8L
+        run: coveralls
