--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -30,6 +30,10 @@ jobs:
           coverage run -m unittest discover -s tests -v
           coverage report
           coverage xml
+
+      - name: Coveralls GitHub Action
+        uses: coverallsapp/github-action@v2.3.0
+
       - name: Submit coverage to Coveralls
         env:
           COVERALLS_REPO_TOKEN: gxT8JHgyNrQMx7HI4O1WRh3c6JYKKKf8L
