added sonarcloud settings

--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -33,5 +33,17 @@ jobs:
 
       - name: Submit coverage to Coveralls
         env:
-          COVERALLS_REPO_TOKEN: gxT8JHgyNrQMx7HI4O1WRh3c6JYKKKf8L
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
         run: coveralls
+
+  sonarcloud:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@v3.1.0
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
